Closed Bug 35099 Opened 24 years ago Closed 24 years ago

Can't login to Webmail

Categories

(Core :: Layout: Form Controls, defect, P3)

defect

Tracking

()

VERIFIED FIXED

People

(Reporter: scalkins, Assigned: karnaze)

References

()

Details

(Keywords: regression)

Attachments

(1 file)

In seamonkey, fails to login to Webmail at all. 
All platforms
Win32 2000-04-07-09 M15
Mac and Linux 2000-04-07-08 M15

Steps to repro:
1)Launch Seamonkey. When browser appears, click on the WebMail picture on the 
default home page. This takes you to /webmail.netscape.com/tpl/Door/Login?
2)Click on the Login button
3)Type your Webmail User name and Password. Then either hit <enter> key, or 
click on the "Sign In" button.

Actual Results: Nothing happens. You stay stuck at the web page:
http://ureg.netscape.com/iiop/UReg2/login/login?U2_LA=en&U2_BACK_FROM_CJ=true&U2
_CS=iso-8859-1&U2_ENDURL=http://webmail.netscape.com/tpl/Subscribe/Step1&U2_NEW_
ENDURL=http://webmail.netscape.com/tpl/Subscribe/Step1&U2_EXITURL=http://home.ne
tscape.com/&U2_SOURCE=Webmail

NOTES: Clicking the Sign On button or hitting enter after typing the 
password will log you in in MS 4.7. It's as if these actions are not recognized 
at all in seamonkey.
Whiteboard: beta2 regression
Priority: P3 → P1
nominated P1 as all netcenter users do this.
Changing back to P3 so that engineering can set priority.  Add beta2 to keyword 
field.
Keywords: beta2, regression
Priority: P1 → P3
Whiteboard: beta2 regression
If you move the <FORM> and </FORM> tags before and after the table,
respectively, it works.  Right now, they are between table rows.

CC karnaze, who fixed a similar problem a long time ago: bug 1318.
*** Bug 35092 has been marked as a duplicate of this bug. ***
This is a regression caused by the new table frame construction code.
Assignee: rods → karnaze
Status: NEW → ASSIGNED
*** Bug 35183 has been marked as a duplicate of this bug. ***
*** Bug 35283 has been marked as a duplicate of this bug. ***
Blocks: 35084
Fixed
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Keywords: nsbeta2
Marking VERIFED FIXED on:
 - MacOS9 2000-04-27-08-M16 Commercial Build
 - Linux6 2000-04-27-09-M16 Commercial Build
 - Win98 2000-04-27-09-M16 Mozilla Build
Status: RESOLVED → VERIFIED
Keywords: beta2
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: