bug 35099 - create form frame when inside table related element. a=leaf